WebCore/css/CSSStyleSheet.h
@@ -72,6 +72,8 @@ public:
     const String& charset() const { return m_charset; }
 
     bool loadCompleted() const { return m_loadCompleted; }
+    
+    virtual void addSubresourceURLStrings(HashSet<String>&, const String& baseURL) const;
 
 protected:
     Document* m_doc;
