WebCore/css/StyleSheet.h
@@ -26,6 +26,8 @@
 #include "StyleList.h"
 #include "PlatformString.h"
 
+#include <wtf/HashSet.h>
+
 namespace WebCore {
 
 class Node;
@@ -59,6 +61,8 @@ public:
 
     virtual void styleSheetChanged() { }
     
+    virtual void addSubresourceURLStrings(HashSet<String>&, const String& baseURL) const { }
+
 protected:
     Node* m_parentNode;
     String m_strHref;
