WebCore/html/HTMLStyleElement.cpp
@@ -130,4 +130,16 @@ void HTMLStyleElement::setType(const AtomicString &value)
     setAttribute(typeAttr, value);
 }
 
+void HTMLStyleElement::getSubresourceAttributeStrings(Vector<String>& urls) const
+{    
+    HashSet<String> styleURLs;
+    StyleSheet* styleSheet = const_cast<HTMLStyleElement*>(this)->sheet();
+    if (styleSheet)
+        styleSheet->addSubresourceURLStrings(styleURLs, ownerDocument()->baseURL());
+    
+    HashSet<String>::iterator end = styleURLs.end();
+    for (HashSet<String>::iterator i = styleURLs.begin(); i != end; ++i)
+        urls.append(*i);
+}
+
 }
